fixed overflow add footer

--- a/src/styles/ColorBox.less
+++ b/src/styles/ColorBox.less
@@ -64,13 +64,17 @@
     width: 100%;
     height: 100%;
     transition: transform 0.65s ease-in-out;
+    transform: scale(0.1);
+    position: fixed;
+    overflow: hidden;
 }
 
 .copy-overlay.show {
     opacity: 1;
-    transform: scale(50);
+    transform: scale(40);
+    max-width: 100%;
+    max-height: 100%;
     z-index: 5;
-    position: absolute;
 }
 
 .copy-message {
