--- a/src/styles/Navbar.less
+++ b/src/styles/Navbar.less
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    height: 8vh;
+    height: 5vh;
 }
 
 .name {
