--- a/src/styles/Palette.less
+++ b/src/styles/Palette.less
@@ -1,11 +1,25 @@
-.Palette {
+.palette {
     height: 100vh;
-
+    display: flex;
+    flex-direction: column;
 }
 
-.Palette-colors {
+.palette-colors {
     height: 90%;
 }
 
+.palette-footer {
+    background-color: white;
+    height: 5vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-weight: bold;
+}
+
+.emoji {
+    font-size: 24px;
+    margin: 0 16px;
+}
 
 
